新增页面css动画效果

--- a/action/aerobic.html
+++ b/action/aerobic.html
@@ -18,10 +18,17 @@
     <link rel="stylesheet" type="text/css"  href="../dist/css/action/action.css">
 </head>
 <body class="">
+    <div id="aerobic_line_right"></div>
+    <div id="aerobic_line_right_dot"></div>
+    <div id="aerobic_line_right_text">
+        上下滑动<br/>
+        设置数值
+    </div>
+
     <div class="block-title font42 pad-top-150">
         <img src="../dist/images/15/aerobic-icon@2x.png"/>&nbsp;有氧搏击
     </div>
-    <div class="block-img-aerobic pad-top-150">
-        <img src="../../dist/images/15/aerobic@2x.png"/>
+    <div class="block-img-aerobic text-center pad-top-165">
+        <img src="../dist/images/15/aerobic.png"/>
     </div>
 </body>
