--- a/action/exercise.html
+++ b/action/exercise.html
@@ -22,7 +22,7 @@
         <img src="../dist/images/12/拳击手套@2x.png"/>&nbsp;训练模式
     </div>
     <div class="block-img-exercise pad-top-150">
-        <img src="../../dist/images/12/exercise@2x.png"/>
+        <img src="../dist/images/12/exercise@2x.png"/>
     </div>
     <div class="block-text-register text-center font25 font-color-747474">
         控制灯光按钮，来引导学员击打练习
