--- a/action/happy.html
+++ b/action/happy.html
@@ -24,6 +24,6 @@
         <img src="../dist/images/13/happy-icon@2x.png"/>&nbsp;娱乐模式
     </div>
     <div class="block-img-exercise pad-top-150">
-        <img src="../../dist/images/13/happy@2x.png"/>
+        <img src="../dist/images/13/happy@2x.png"/>
     </div>
 </body>
