--- a/connect.html
+++ b/connect.html
@@ -16,14 +16,30 @@
     <!-- Build CSS -->
     <link rel="stylesheet" type="text/css"  href="dist/css/public.css">
     <link rel="stylesheet" type="text/css"  href="dist/css/app.css">
+    <style>
+      
+       
+    </style>
 </head>
 <body class="">
     <div class="block-title font42 pad-top-150">
         <img src="./dist/images/8/符号-链接块@2x.png"/>&nbsp;设备连接
     </div>
-    <div class="block-img-connect pad-top-135">
+    <div id="connect_line_left"></div>
+    <div id="connect_line_left_dot"></div>
+    <div id="connect_line_left_text">①点击运动</div>
+    <div id="connect_line_right"></div>
+    <div id="connect_line_right_2"></div>
+    <div id="connect_line_right_3"></div>
+    <div id="connect_line_right_4"></div>
+    <div id="connect_line_right_dot"></div>
+    <div id="connect_line_right_dot_2"></div>
+    <div id="content_line_right_text">
+        ②点击任意一个按钮进入连接设备界面
+    </div>
+    <div class="block-img-connect text-center pad-top-150">
         <a href="./operation.html">
-            <img src="./dist/images/8/图层8副本2@2x.png"/>
+            <img src="./dist/images/8/connect.png"/>
         </a>
     </div>
 </body>
