--- a/func.html
+++ b/func.html
@@ -18,16 +18,39 @@
     <link rel="stylesheet" type="text/css"  href="dist/css/func.css">
 </head>
 <body class="">
-    <div class="block-title font42 pad-top-150">
+    <div id="func_line_left"></div>
+    <div id="func_line_left2"></div>
+    <div id="func_line_left_dot"></div>
+    <div id="func_line_left_text">开关</div>
+
+    <div id="func_line_top_left"></div>
+    <div id="func_line_top_right"></div>
+    <div id="func_line_top_left2"></div>
+    <div id="func_line_top_right2"></div>
+    <div id="func_line_top_text">“U”型光条</div>
+
+    <div id="func_line_bottom_left"></div>
+    <div id="func_line_bottom_left_dot"></div>
+    <div id="func_line_bottom_center_dot"></div>
+    <div id="func_line_bottom_center"></div>
+    <div id="func_line_bottom_right"></div>
+     <div id="func_line_bottom_right_dot"></div>
+    <div id="func_line_bottom_left2"></div>
+    <div id="func_line_bottom_right2"></div>
+    <div id="func_line_bottom_text">击打传感部位</div>
+
+    <div class="block-title font42 pad-top-165">
         <img src="./dist/images/4/硬件@2x.png"/>&nbsp;硬件功能分解
     </div>
-    <div class="block-img text-center pad-top-120">
-         <img class="width-full" src="./dist/images/4/图层6副本2@2x.png" />
+    <div class="block-img text-center pad-top-240">
+         <img class="width-full" src="./dist/images/4/func.png" />
     </div>
     <div class="pad-top-116 font25 block-text font-color-747474">
         ①&nbsp;搏击垫主体有“开关”，“左，中，右”三个方向 <br/>
         击打传感部位，当用户击打任意一个方向时，圆圈中  <br/>
         亮起绿色灯光，表示击中的方位 <br/>
+    </div>
+    <div class="font25 block-text2 font-color-747474">
         ②&nbsp;“U”型光条表示力量大小，力量越大，光条亮起的<br/>
         彩光越往上爬。
     </div>
