--- a/list.html
+++ b/list.html
@@ -15,9 +15,15 @@
     <link rel="shortcut icon" href="" type="image/x-icon">
     <!-- Build CSS -->
     <link rel="stylesheet" type="text/css"  href="dist/css/public.css">
+    <link rel="stylesheet" type="text/css"  href="dist/css/list.css">
 </head>
 <body class="">
+    <div id="list_text1" class="list-text">①&nbsp;搏击垫</div>
+    <div id="list_text2" class="list-text">②&nbsp;移动电源</div>
+    <div id="list_text3" class="list-text">③&nbsp;绑带</div>
+    <div id="list_text4" class="list-text">④&nbsp;说明书</div>
+    <div id="list_text5" class="list-text">⑤&nbsp;包装盒</div>
     <div>
-        <img class="width-full" src="./dist/images/3/3page.jpg" />
+        <img class="width-full" src="./dist/images/3/list.jpg" />
     </div>
 </body>
