--- a/operation.html
+++ b/operation.html
@@ -18,11 +18,32 @@
     <link rel="stylesheet" type="text/css"  href="dist/css/app.css">
 </head>
 <body class="">
+    <div id="operation_line_left"></div>
+    <div id="operation_line_left_dot"></div>
+    <div id="operation_line_left_text">
+        用户选择<br/>
+        最多可同<br/>
+        时连接4台
+    </div>
+    <div id="operation_line_right"></div>
+    <div id="operation_line_right_dot"></div>
+    <div id="operation_line_right_text">一键连接</div>
+    <div id="operation_line_right2"></div>
+    <div id="operation_line_right_dot2"></div>
+    <div id="operation_line_right_text2">设备排序</div>
+    <div id="operation_line_right3"></div>
+    <div id="operation_line_right_dot3"></div>
+    <div id="operation_line_right_text3">关闭设备</div>
+    <div id="operation_line_bottom"></div>
+    <div id="operation_line_bottom_dot"></div>
+     <div id="operation_line_bottom1"></div>
+    <div id="operation_line_bottom_text">断开连接</div>
+
     <div class="block-title font42 pad-top-150">
         <img src="./dist/images/9/符号-链接块@2x.png"/>&nbsp;设备连接操作
     </div>
-    <div class="block-img-operation text-center pad-top-140">
-        <img src="./dist/images/9/图层8副本3@2x.png"/>
+    <div class="block-img-operation text-center pad-top-150">
+        <img src="./dist/images/9/operation.png"/>
     </div>
     <div class="pad-top-60 block-text-operation font-color-747474">
         在设备首次连接成功后，下次使用过程中只需点击黄<br/>
