--- a/setting.html
+++ b/setting.html
@@ -18,11 +18,23 @@
     <link rel="stylesheet" type="text/css"  href="./dist/css/action/action.css">
 </head>
 <body class="">
+    <div id="user_line_right"></div>
+    <div id="user_line_right_dot"></div>
+    <div id="user_line_right_text">
+        设置有<br/>
+        效力量
+    </div>
+    <div id="user_line_right2"></div>
+    <div id="user_line_right_dot2"></div>
+    <div id="user_line_right_text2">
+        设置灯<br/>
+        光变化
+    </div>
     <div class="block-title font42 pad-top-150">
         <img src="./dist/images/17/setting-icon@2x.png"/>&nbsp;个人模版
     </div>
-    <div class="block-img-user pad-top-150">
-        <img src="./dist/images/17/setting@2x.png"/>
+    <div class="block-img-user pad-top-165 text-center">
+        <img src="./dist/images/17/setting.png"/>
     </div>
     <div class="pad-top-70 block-text-user font25 font-color-747474">
         “力量起始值”设定有效力量最小值，以防止练习者偷懒；<br/>
