--- a/action/data.html
+++ b/action/data.html
@@ -22,7 +22,7 @@
         <img src="../dist/images/16/data-icon@2x.png"/>&nbsp;数据模版
     </div>
     <div class="block-img-data text-center pad-top-150">
-        <img src="../../dist/images/16/data@2x.png"/>
+        <img src="../dist/images/16/data@2x.png"/>
     </div>
     <div class="pad-top-70 block-text-register text-center font25 font-color-747474">
         用户可系统了解每天、每周、每月、每年的<br/>
