--- a/action/double.html
+++ b/action/double.html
@@ -22,6 +22,6 @@
         <img src="../dist/images/14/double-icon@2x.png"/>&nbsp;双人搏击
     </div>
     <div class="block-img-exercise pad-top-150">
-        <img src="../../dist/images/14/double@2x.png"/>
+        <img src="../dist/images/14/double@2x.png"/>
     </div>
 </body>
