新增css3文字渐变动效

--- a/open.html
+++ b/open.html
@@ -23,19 +23,19 @@
     </div>
 
     <div class="pad-top-116 block-text-open font-color-fff font25">
-        <div>
+        <div class="block-text-open1">
             ①  开机：<span class="bold">长按开关2s</span>，产品中间亮起红色<br/>
             呼吸灯，并有语音提示“等待连接”，通过<br/>
             手机App实现软件与设备的对接；
         </div>
-        <div class="margin-top-65">
+        <div class="block-text-open2 margin-top-65">
             ②  离线切换：<span class="bold">双击开关</span>，设备可切换为“离线<br/>
             模式”，并有语音提示“离线中”。“离线模式”<br/>
             主要用于没有手机或平板的条件下，用户可通过<br/>
             产品上的灯光变化，直观了解击打的方向，与力<br/>
             量大小；
         </div>
-        <div class="margin-top-65">
+        <div class="block-text-open3 margin-top-65">
             ③ 关机：<span class="bold">长按开关3s</span>，有语音提示“正在关机”，<br/>
             此时设备关闭，或通过将移动电源与USB引线分<br/>
             离实现关闭设备。
