--- a/install.html
+++ b/install.html
@@ -25,8 +25,12 @@
          <img src="./dist/images/5/DZ8A6742@2x.png" />
     </div>
     <div class="pad-top-116 block-text-install font-color-747474">
-        ① 产品固定于沙袋柱使用展示 <br/>
-        ②  绑带魔术贴毛面朝外 <br/>
+        ① 产品固定于沙袋柱使用展示
+    </div>
+     <div class="block-text-install2 font-color-747474"> 
+        ②  绑带魔术贴毛面朝外 
+    </div>
+    <div class="block-text-install3 font-color-747474">
         ③ 搏击垫背面的魔术贴勾面对着绑带毛面贴紧 
     </div>
 </body>
