动效细节优化

--- a/action/free.html
+++ b/action/free.html
@@ -21,13 +21,13 @@
     <div id="free_line_right"></div>
     <div id="free_line_right_dot"></div>
     <div id="free_line_right_text">点击开始</div>
-    <div class="block-title font42 pad-top-150">
+    <div class="block-title font42 pad-top-90">
         <img src="../dist/images/11/自由活动@2x.png"/>&nbsp;自由模式
     </div>
     <div class="block-img-free text-center pad-top-130">
         <img src="../dist/images/11/free.png"/>
     </div>
-    <div class="pad-top-70 block-text-register text-center font25 font-color-747474">
+    <div class="pad-top-70 block-text-free text-center font25 font-color-747474">
         用户可根据教练安排或自定义训练项目，进行击打练习。<br/>
         点击用户头像，用户对应的搏击垫亮起绿色灯光 
     </div>
