--- a/list.html
+++ b/list.html
@@ -23,7 +23,7 @@
     <div id="list_text3" class="list-text">③&nbsp;绑带</div>
     <div id="list_text4" class="list-text">④&nbsp;说明书</div>
     <div id="list_text5" class="list-text">⑤&nbsp;包装盒</div>
-    <div>
+    <div class="margin-top--60">
         <img class="width-full" src="./dist/images/3/list.jpg" />
     </div>
 </body>
