--- a/media.html
+++ b/media.html
@@ -18,7 +18,7 @@
   
 </head>
 <body>
-    <div>
+    <div class="margin-top--60">
         <img class="width-full" src="./dist/images/19/media.jpg" />
     </div>
 </body>
