--- a/register.html
+++ b/register.html
@@ -18,13 +18,16 @@
     <link rel="stylesheet" type="text/css"  href="dist/css/app.css">
 </head>
 <body class="">
-    <div class="block-title font42 pad-top-150">
+    <div class="block-title font42 pad-top-90">
         <img src="./dist/images/7/注册@2x.png"/>&nbsp;用户注册
     </div>
     <div class="block-img-register text-center pad-top-40">
         <img src="./dist/images/7/register@2x.png"/>
     </div>
     <div class="pad-top-52 block-text-register font-color-747474">
-        打开Tata-Punch App 根据首页提示进行用户注册 
+        ①&nbsp;打开Tata-Punch App 根据首页提示进行用户注册 
+    </div>
+     <div class="block-text-register2 font-color-747474">
+        ②&nbsp;用户可通过手机号码，或使用第三方账号进行注册
     </div>
 </body>
