--- a/setting.html
+++ b/setting.html
@@ -30,14 +30,16 @@
         设置灯<br/>
         光变化
     </div>
-    <div class="block-title font42 pad-top-150">
+    <div class="block-title font42 pad-top-90">
         <img src="./dist/images/17/setting-icon@2x.png"/>&nbsp;个人模版
     </div>
     <div class="block-img-user pad-top-165 text-center">
         <img src="./dist/images/17/setting.png"/>
     </div>
     <div class="pad-top-70 block-text-user font25 font-color-747474">
-        “力量起始值”设定有效力量最小值，以防止练习者偷懒；<br/>
+        “力量起始值”设定有效力量最小值，以防止练习者偷懒；
+    </div>
+    <div class="block-text-user2 font25 font-color-747474">
         “力量灯效”设置U型光条在击打过程变化幅度，带给不 <br/>
         同性别、年龄或重量的练习者更好的体验。 
 
