--- a/data.html
+++ b/data.html
@@ -18,13 +18,13 @@
     <link rel="stylesheet" type="text/css"  href="./dist/css/action/action.css">
 </head>
 <body>
-    <div class="block-title font42 pad-top-150">
+    <div class="block-title font42 pad-top-90">
         <img src="./dist/images/16/data-icon@2x.png"/>&nbsp;数据模版
     </div>
     <div class="block-img-data text-center pad-top-150">
         <img src="./dist/images/16/data@2x.png"/>
     </div>
-    <div class="pad-top-70 block-text-register text-center font25 font-color-747474">
+    <div class="pad-top-70 block-text-data text-center font25 font-color-747474">
         用户可系统了解每天、每周、每月、每年的<br/>
         运动数据变化及进步情况
     </div>
